--- a/package.json
+++ b/package.json
@@ -6,15 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server -d 750 -w -p 3333 ./server.js"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.2.5",
+    "lodash": "^4.17.21",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.184",
+    "@types/node": "^18.7.15",
+    "@types/react": "^18.0.18",
+    "@types/react-virtualized": "^9.21.21",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "json-server": "^0.17.0",
+    "typescript": "^4.8.2"
   }
 }
